# podgpt

./: .gitignore  Cargo.toml  Dockerfile  Gpt.hs  README.Docker.md  README.md  compose.yaml  fly.toml  railway.json
.opencode/: opencode.db  opencode.db-shm  opencode.db-wal
src/: bot.rs  config.rs  error.rs  gpt.rs  main.rs  utils.rs
src/commands/: all_commands.rs  chat.rs  image.rs  manage.rs  mod.rs  roast.rs
src/services/: channel_summary.rs  chat.rs  conversation.rs  image.rs  image_generator.rs  mod.rs  search.rs  tools.rs  url_reader.rs
