[package]
name = "podgpt"
version = "0.1.0"
edition = "2024"

[dependencies]
async-openai = "0.28.0"
base64 = "0.22"
dashmap = "6"
poise = "0.6.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serenity = "0.12.4"
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
